# amdgpu-fan

./: .travis.yml  CMakeLists.txt  README.md
.github/workflows/: main.yml
src/: amdgpufand.c
